SDKs/adobe.com/aem/3.5.0-pre.0/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { GetAemProductInfoResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";

const sdk = new SDK(withSecurity(
  security: {
    aemAuth: {
      password: "YOUR_PASSWORD_HERE",
      username: "YOUR_USERNAME_HERE",
    },
  }
));

sdk.console.getAemProductInfo().then((res: GetAemProductInfoResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### console

* `getAemProductInfo`
* `getConfigMgr`
* `postBundle`
* `postJmxRepository`
* `postSamlConfiguration`

### cq

* `getLoginPage`
* `postCqActions`

### crx

* `getCrxdeStatus`
* `getInstallStatus`
* `getPackageManagerServlet`
* `postPackageService`
* `postPackageServiceJson`
* `postPackageUpdate`
* `postSetPassword`

### custom

* `getAemHealthCheck`
* `postConfigAemHealthCheckServlet`
* `postConfigAemPasswordReset`

### granite

* `sslSetup`

### sling

* `deleteAgent`
* `deleteNode`
* `getAgent`
* `getAgents`
* `getAuthorizableKeystore`
* `getKeystore`
* `getNode`
* `getPackage`
* `getPackageFilter`
* `getQuery`
* `getTruststore`
* `getTruststoreInfo`
* `postAgent`
* `postAuthorizableKeystore`
* `postAuthorizables`
* `postConfigAdobeGraniteSamlAuthenticationHandler`
* `postConfigApacheFelixJettyBasedHttpService`
* `postConfigApacheHttpComponentsProxyConfiguration`
* `postConfigApacheSlingDavExServlet`
* `postConfigApacheSlingGetServlet`
* `postConfigApacheSlingReferrerFilter`
* `postConfigProperty`
* `postNode`
* `postNodeRw`
* `postPath`
* `postQuery`
* `postTreeActivation`
* `postTruststore`
* `postTruststorePkcs12`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
