SDKs/adobe.com/aem/3.7.1-pre.0/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add https://gitpkg.now.sh/speakeasy-api/openapi-directory/SDKs/adobe.com/aem/3.7.1-pre.0/typescript
```

### Yarn

```bash
yarn add https://gitpkg.now.sh/speakeasy-api/openapi-directory/SDKs/adobe.com/aem/3.7.1-pre.0/typescript
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import {
  GetAemProductInfoResponse
} from "openapi/dist/sdk/models/operations";

import { AxiosError } from "axios";
import { SDK } from "openapi";
const sdk = new SDK({
  security: {
    password: "YOUR_PASSWORD_HERE",
    username: "YOUR_USERNAME_HERE",
  },
});

sdk.console.getAemProductInfo().then((res: GetAemProductInfoResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations


### console

* `getAemProductInfo`
* `getBundleInfo`
* `getConfigMgr`
* `postBundle`
* `postJmxRepository`
* `postSamlConfiguration`

### cq

* `getLoginPage`
* `postCqActions`

### crx

* `getCrxdeStatus`
* `getInstallStatus`
* `getPackageManagerServlet`
* `postPackageService`
* `postPackageServiceJson`
* `postPackageUpdate`
* `postSetPassword`

### custom

* `getAemHealthCheck`
* `postConfigAemHealthCheckServlet`
* `postConfigAemPasswordReset`

### granite

* `sslSetup`

### sling

* `deleteAgent`
* `deleteNode`
* `getAgent`
* `getAgents`
* `getAuthorizableKeystore`
* `getKeystore`
* `getNode`
* `getPackage`
* `getPackageFilter`
* `getQuery`
* `getTruststore`
* `getTruststoreInfo`
* `postAgent`
* `postAuthorizableKeystore`
* `postAuthorizables`
* `postConfigAdobeGraniteSamlAuthenticationHandler`
* `postConfigApacheFelixJettyBasedHttpService`
* `postConfigApacheHttpComponentsProxyConfiguration`
* `postConfigApacheSlingDavExServlet`
* `postConfigApacheSlingGetServlet`
* `postConfigApacheSlingReferrerFilter`
* `postConfigProperty`
* `postNode`
* `postNodeRw`
* `postPath`
* `postQuery`
* `postTreeActivation`
* `postTruststore`
* `postTruststorePkcs12`
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)

